fixed spacing on the navbar

--- a/clickygame/src/components/Navbar/Navbar.css
+++ b/clickygame/src/components/Navbar/Navbar.css
@@ -1,15 +1,16 @@
 .navbar {
-    background-color: aqua;
+    background-color: black;
 }
 .navbar-brand {
     float: left;
     margin-left: 20px;
+  
 }
 .nav-message {
     float: right;
-    margin-right: 10px;
+    
 }
 .nav-score {
     float: right;
-    margin-right: 10px;
+   
 }
